# insurance-price-prediction

./: pyproject.toml  requirements.yml
.cicd/: ci.yml
.github/workflows/: ci.yml
insurance_price_prediction/preprocessing/: text_preprocessing.py
notebooks/: insurance-price-prediction.ipynb
tests/preprocessing/: test_preprocessing.py
